--- a/index.html
+++ b/index.html
@@ -433,7 +433,8 @@
     </div>
 
     <script>
-      baliDest.addEventListener('click', function () {
+      const baliDiv = document.querySelector('baliDest');
+      baliDiv.addEventListener('click', function () {
             window.location.href = 'https://moizeshenriques.github.io/travelwise/bali.html';            
         });
     </script>
