--- a/index.html
+++ b/index.html
@@ -409,14 +409,14 @@
         <h5>EXPLORE</h5>
         <h2>Top Destinations</h2>
         <div class="all-destinations">
+            <a href="bali.html">
             <div class="destination">
-              <div class="baliDest">
                 <img src="images/home/bali1.png" alt="Bali">
                 <p>Bali</p>
                 <p><b>$76/day</b></p><br>
                 <p>10 Days Trip</p>
-              </div>
             </div>
+            </a>
             <div class="destination">
                 <img src="images/home/iceland1.png" alt="Iceland">
                 <p>Iceland</p>
@@ -431,14 +431,7 @@
             </div>
         </div>
     </div>
-
-    <script>
-      const baliDiv = document.querySelector('baliDest');
-      baliDiv.addEventListener('click', function () {
-            window.location.href = 'https://moizeshenriques.github.io/travelwise/bali.html';            
-        });
-    </script>
-
+  
     <div class="testimonials-section">
         <div class="testimonial-heading">
             <h5>TESTIMONIALS</h5>
