--- a/sign-up.html
+++ b/sign-up.html
@@ -204,7 +204,7 @@
             <h1>Travel Wise</h1>
         </div>
 
-        <button id="menu-button">
+        <button id="menu-button" onclick="return validateForm()" >
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
