--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
         <h5>EXPLORE</h5>
         <h2>Top Destinations</h2>
         <div class="all-destinations">
-            <a href="bali.html">
+            <a href="https://moizeshenriques.github.io/travelwise/bali.html">
             <div class="destination">
                 <img src="images/home/bali1.png" alt="Bali">
                 <p>Bali</p>
