--- a/currency-rate.html
+++ b/currency-rate.html
@@ -130,8 +130,9 @@
         }
 
         .right-section img {
-            height: 85%;
-            margin-top: -30px; 
+            height: 40%;
+            margin-top: 100px; 
+            margin-right: 100px;
         }
 
         .calculator-title {
