--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     </script>
     
     <style>
+      a {
+        display: block;
+      }
         .intro-section{
             display: flex;
         }
