--- a/iceland.html
+++ b/iceland.html
@@ -316,7 +316,11 @@
             <h1>Travel Wise</h1>
         </div>
 
-
+        <button id="menu-button">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </button>
 
         <nav class="nav-list" id="myNav-list">
             <a class="nav-item" href="#">Smart Search</a>
