updated Nepal country page

--- a/nepal.html
+++ b/nepal.html
@@ -204,6 +204,15 @@
         height: 300px;
     }
 
+    .destination h4{
+            box-shadow: 0px 2.463px 4.187px 0px rgba(0, 0, 0, 0.00),
+                    0px 10.838px 8.67px 0px rgba(0, 0, 0, 0.01),
+                    0px 26.602px 17.292px 0px rgba(0, 0, 0, 0.01),
+                    0px 51.234px 33.893px 0px rgba(0, 0, 0, 0.01),
+                    0px 86.212px 62.319px 0px rgba(0, 0, 0, 0.02),
+                    0px 133.012px 106.41px 0px rgba(0, 0, 0, 0.02);
+    }
+
     .destination-content{
         align-self: flex-end;
         margin-left: 30px;
@@ -338,19 +347,19 @@
             <div class="do-places-img">
                 <div class="place">
                     <img src="images/everest.jpg" alt="Pashupatinath Temple"><br>
-                    <p>Mount Everest</p>
+                    <p>Mount Everest</p><br>
                     <p>5 stars</p><br>
                     <p>Adventure</p>
                 </div>
                 <div class="place">
                     <img src="images/phewlake.jpg" alt="Phewa Lake"><br>
-                    <p>Phewa Lake</p>
+                    <p>Phewa Lake</p><br>
                     <p>5 stars</p><br>
                     <p>Nature, Relaxation</p>
                 </div>
                 <div class="place">
                     <img src="images/sagarmatha.jpg" alt="Sagarmatha National Park"><br>
-                    <p>Sagarmatha National Park</p>
+                    <p>Sagarmatha National Park</p><br>
                     <p>5 stars</p><br>
                     <p>Adventure, Scenic</p>
                 </div>
@@ -365,19 +374,19 @@
             <div class="eat-places-img">
                 <div class="eat-place">
                     <img src="images/utse.jpg" alt="Dal Bhat"><br>
-                    <p>Utse Restaurante</p>
+                    <p>Utse Restaurante</p><br>
                     <p>5 stars</p><br>
                     <p>Traditional Nepali</p>
                 </div>
                 <div class="eat-place">
                     <img src="images/cafe.jpg" alt="Momos"><br>
-                    <p>The Northfield Cafe</p>
+                    <p>The Northfield Cafe</p><br>
                     <p>5 stars</p><br>
                     <p>Cafe</p>
                 </div>
                 <div class="eat-place">
-                    <img src="images/pagodabar.jpg" alt="Newari Cuisine"><br>
-                    <p>Eletric Pagoda Bar</p>
+                    <img src="images/pogodabar.jpg" alt="Newari Cuisine"><br>
+                    <p>Eletric Pagoda Bar</p><br>
                     <p>4 stars</p><br>
                     <p>Cultural, Spicy</p>
                 </div>
