--- a/index.html
+++ b/index.html
@@ -412,14 +412,14 @@
         <h5>EXPLORE</h5>
         <h2>Top Destinations</h2>
         <div class="all-destinations">
-            <a href="bali.html">
             <div class="destination">
+                <div id="baliDest">
                 <img src="images/home/bali1.png" alt="Bali">
                 <p>Bali</p>
                 <p><b>$76/day</b></p><br>
                 <p>10 Days Trip</p>
+                </div>
             </div>
-            </a>
             <div class="destination">
                 <img src="images/home/iceland1.png" alt="Iceland">
                 <p>Iceland</p>
@@ -434,6 +434,13 @@
             </div>
         </div>
     </div>
+
+    <script>
+      const baliDiv = document.getElementById('baliDest');
+      baliDiv.addEventListener('click', function () {
+            location.href = "bali.html";            
+        });
+    </script>
   
     <div class="testimonials-section">
         <div class="testimonial-heading">
