--- a/index.html
+++ b/index.html
@@ -418,16 +418,20 @@
                 </div>
             </div>
             <div class="destination">
+                <div id="icelandDest">
                 <img src="images/home/iceland1.png" alt="Iceland">
                 <p>Iceland</p>
                 <p><b>$293/day</b></p><br>
                 <p>9 Days Trip</p>
+                </div>
             </div>
             <div class="destination">
+                <div id="japanDest">
                 <img src="images/home/japan1.png" alt="Japan">
                 <p>Japan</p>
                 <p><b>$125/day</b></p><br>
                 <p>7 Days Trip</p>
+                </div>
             </div>
         </div>
     </div>
@@ -436,6 +440,16 @@
       const baliDiv = document.getElementById('baliDest');
       baliDiv.addEventListener('click', function () {
             location.href = "bali.html";            
+      });
+
+      const icelandDiv = document.getElementById('icelandDest');
+          baliDiv.addEventListener('click', function () {
+            location.href = "iceland.html";            
+      });
+
+      const japanDiv = document.getElementById('japanDest');
+          baliDiv.addEventListener('click', function () {
+            location.href = "japan.html";            
       });
     </script>
   
