--- a/iceland.html
+++ b/iceland.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="iceland, what to do in inceland, travel, international travel, travel budget calculator, currency rates, budgeting, cheap destinations, travel packages">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Volkhov&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap">
     <link rel="stylesheet" href="styles.css">
