--- a/index.html
+++ b/index.html
@@ -444,12 +444,12 @@
       });
 
       const icelandDiv = document.getElementById('icelandDest');
-      baliDiv.addEventListener('click', function () {
+      icelandDiv.addEventListener('click', function () {
             location.href = "iceland.html";            
       });
 
       const japanDiv = document.getElementById('japanDest');
-      baliDiv.addEventListener('click', function () {
+      japanDiv.addEventListener('click', function () {
             location.href = "japan.html";            
       });
     </script>
