--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@
 
             .testimonial-entry img {
                 margin-left: 0;
+                object-fit: cover;
             }
         }
 
