--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
             <div class="testimonial-text">
                 <p>“TravelWise helped me plan my senior graduation trip with my college roommates!
                     As recent grads, our budget was skim but we spent the most amazing days in Indonesia
-                    for a little over $40/days.”</p><br>
+                    for a little over $40/day.”</p><br>
                 <p><b>Emily Johnson</b></p>
                 <p>College Student</p>
             </div>  
