all countries pages mobile friendly

--- a/japan.html
+++ b/japan.html
@@ -344,7 +344,7 @@
 
    
     <div class="japan-essentials-section">
-        <h2>France Essentials</h2>
+        <h2>Japan Essentials</h2>
         <div class="what-to-do-section">
             <div class ="do-places-text">
                 <h4>What to do</h4>
