--- a/italy.html
+++ b/italy.html
@@ -237,7 +237,7 @@
     background: url('amalfi.jpg') center/cover;
     }
 
-    @media screen and (max-width: 600px) {
+    @media screen and (max-width: 900px) {
 
         .explore-italy-section {
             padding: 0px;
@@ -315,7 +315,11 @@
             <h1>Travel Wise</h1>
         </div>
 
-
+        <button id="menu-button">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </button>
 
         <nav class="nav-list" id="myNav-list">
             <a class="nav-item" href="#">Smart Search</a>
