updated nepal Iceland Italy

--- a/iceland.html
+++ b/iceland.html
@@ -224,19 +224,19 @@
     }
     
     .destination:nth-child(1) {
-    background: url('reykjavik.jpg') center/cover;
+    background: url('images/iceland/reykjavik.jpg') center/cover;
     }
 
     .destination:nth-child(2) {
-    background: url('images/iceland2.jpg') center/cover;
+    background: url('images/iceland/iceland2.jpg') center/cover;
     }
 
     .destination:nth-child(3) {
-    background: url('images/iceland3.jpg') center/cover;
+    background: url('images/iceland/iceland3.jpg') center/cover;
     }
 
     .destination:nth-child(4) {
-    background: url('images/iceland4.jpg') center/cover;
+    background: url('images/iceland/iceland4.jpg') center/cover;
     }
 
     @media screen and (max-width: 900px) {
@@ -341,7 +341,7 @@
             each destination is a chapter in Iceland's unique story. Discover the Northern Lights dancing across the
             Arctic sky and indulge in the warmth of geothermal hot springs. Iceland invites you to explore its
             otherworldly beauty, where every moment is a testament to the raw power and elegance of nature.</p>
-        <img src="iceland.jpg" alt="Iceland">
+        <img src="images/iceland/iceland.jpg" alt="Iceland">
     </div>
     
     <div class="iceland-essentials-section">
@@ -353,19 +353,19 @@
             </div>
             <div class="do-places-img">
                 <div class="place">
-                    <img src="Reykjavik2.jpg" alt="Reykjavik"><br>
+                    <img src="images/iceland/Reykjavik2.jpg" alt="Reykjavik"><br>
                     <p>Reykjavik</p><br>
                     <p>5 stars</p><br>
                     <p>City</p>
                 </div>
                 <div class="place">
-                    <img src="waterfalls2.jpg" alt="Gullfoss Waterfall"><br>
+                    <img src="images/iceland/waterfalls2.jpg" alt="Gullfoss Waterfall"><br>
                     <p>Gullfoss Waterfall</p><br>
                     <p>5 stars</p><br>
                     <p>Waterfalls
                     </div>
                     <div class="place">
-                        <img src="nationapark.jpg" alt="national park Þingvellir"><br>
+                        <img src="images/iceland/nationapark.jpg" alt="national park Þingvellir"><br>
                         <p>National Park Þingvellir</p><br>
                         <p>5 stars</p><br>
                         <p>Nature</p>
@@ -380,19 +380,19 @@
                 </div>
                 <div class="eat-places-img">
                     <div class="eat-place">
-                        <img src="images/laprima.jpg" object-fit="cover" alt="Skyr"><br>
+                        <img src="images/iceland/laprima.jpg" object-fit="cover" alt="Skyr"><br>
                         <p>La Primavera Ristorante</p><br>
                         <p>5 stars</p><br>
                         <p>Northern Italian</p>
                     </div>
                     <div class="eat-place">
-                        <img src="images/brut.jpg" alt="Icelandic Lamb"><br>
+                        <img src="images/iceland/brut.jpg" alt="Icelandic Lamb"><br>
                         <p>Brut</p><br>
                         <p>4 stars</p><br>
                         <p>Sea food</p>
                     </div>
                     <div class="eat-place">
-                        <img src="tides.jpg" alt="Rúgbrauð"><br>
+                        <img src="images/iceland/tides.jpg" alt="Rúgbrauð"><br>
                         <p>Tide</p><br>
                         <p>4 stars</p><br>
                         <p>International</p>
