--- a/nepal.html
+++ b/nepal.html
@@ -222,19 +222,19 @@
     }
     
     .destination:nth-child(1) {
-    background: url('images/kathmandu.jpg') center/cover;
+    background: url('images/nepal/kathmandu.jpg') center/cover;
     }
 
     .destination:nth-child(2) {
-    background: url('images/pokhara.jpg') center/cover;
+    background: url('images/nepal/pokhara.jpg') center/cover;
     }
 
     .destination:nth-child(3) {
-    background: url('images/chitwan.jpg') center/cover;
+    background: url('images/nepal/chitwan.jpg') center/cover;
     }
 
     .destination:nth-child(4) {
-    background: url('images/lumbini.jpg') center/cover;
+    background: url('images/nepal/lumbini.jpg') center/cover;
     }
 
     @media screen and (max-width: 900px) {
@@ -334,7 +334,7 @@
     <div class ="explore-nepal-section">
         <h1>Explore: Nepal</h1>
         <p>Embark on a mesmerizing journey through the enchanting landscapes of Nepal, where every moment unfolds against a backdrop of majestic mountains, vibrant culture, and spiritual richness. From the towering peaks of the Himalayas to the serene beauty of Pokhara's lakes, and the ancient temples of Kathmandu to the lush jungles of Chitwan, Nepal offers a tapestry of experiences that resonate with centuries-old traditions. Explore bustling marketplaces, partake in spiritual rituals, and immerse yourself in the warmth of Nepalese hospitality. Nepal invites you to discover a new chapter in this captivating narrative, seamlessly blending natural wonders with cultural treasures.</p>
-        <img src="images/nepal.jpg" alt="Nepal">
+        <img src="images/nepal/nepal.jpg" alt="Nepal">
     </div>
     
     <div class="nepal-essentials-section">
@@ -346,19 +346,19 @@
             </div>
             <div class="do-places-img">
                 <div class="place">
-                    <img src="images/everest.jpg" alt="Pashupatinath Temple"><br>
+                    <img src="images/nepal/everest.jpg" alt="Pashupatinath Temple"><br>
                     <p>Mount Everest</p><br>
                     <p>5 stars</p><br>
                     <p>Adventure</p>
                 </div>
                 <div class="place">
-                    <img src="images/phewlake.jpg" alt="Phewa Lake"><br>
+                    <img src="images/nepal/phewlake.jpg" alt="Phewa Lake"><br>
                     <p>Phewa Lake</p><br>
                     <p>5 stars</p><br>
                     <p>Nature, Relaxation</p>
                 </div>
                 <div class="place">
-                    <img src="images/sagarmatha.jpg" alt="Sagarmatha National Park"><br>
+                    <img src="images/nepal/sagarmatha.jpg" alt="Sagarmatha National Park"><br>
                     <p>Sagarmatha National Park</p><br>
                     <p>5 stars</p><br>
                     <p>Adventure, Scenic</p>
@@ -373,19 +373,19 @@
             </div>
             <div class="eat-places-img">
                 <div class="eat-place">
-                    <img src="images/utse.jpg" alt="Dal Bhat"><br>
+                    <img src="images/nepal/utse.jpg" alt="Dal Bhat"><br>
                     <p>Utse Restaurante</p><br>
                     <p>5 stars</p><br>
                     <p>Traditional Nepali</p>
                 </div>
                 <div class="eat-place">
-                    <img src="images/cafe.jpg" alt="Momos"><br>
+                    <img src="images/nepal/cafe.jpg" alt="Momos"><br>
                     <p>The Northfield Cafe</p><br>
                     <p>5 stars</p><br>
                     <p>Cafe</p>
                 </div>
                 <div class="eat-place">
-                    <img src="images/pogodabar.jpg" alt="Newari Cuisine"><br>
+                    <img src="images/nepal/pogodabar.jpg" alt="Newari Cuisine"><br>
                     <p>Eletric Pagoda Bar</p><br>
                     <p>4 stars</p><br>
                     <p>Cultural, Spicy</p>
