--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
 
         .destination:hover {
             box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+            cursor: pointer;
         }
 
         .testimonials-section{
