--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
             text-align: center;
         }
 
+        .work-steps:hover {
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+            cursor: pointer;
+        }
+
         .works-steps h5{
             margin-top: -20px;
             font-size: 16px;
