--- a/germany.html
+++ b/germany.html
@@ -222,15 +222,15 @@
     }
     
     .destination:nth-child(1) {
-    background: url('berlin.png') center/cover;
+    background: url('images/berlin.png') center/cover;
     }
 
     .destination:nth-child(2) {
-    background: url('munich.png') center/cover;
+    background: url('images/munich.png') center/cover;
     }
 
     .destination:nth-child(3) {
-    background: url('cologne.png') center/cover;
+    background: url('images/cologne.png') center/cover;
     }
 
     .destination:nth-child(4) {
@@ -379,19 +379,19 @@
             </div>
             <div class ="eat-places-img">
                 <div class = "eat-place">
-                    <img src="germanfood1.png" alt="Schwarzwaldstube">
+                    <img src="images/germanfood1.png" alt="Schwarzwaldstube">
                     <p>Schwarzwaldstube</p><br>
                     <p>5 stars</p><br>
                     <p>Fine Dining</p>
                 </div>
                 <div class = "eat-place">
-                    <img src="germanfood2.png" alt="Hofbrauhaus">
+                    <img src="images/germanfood2.png" alt="Hofbrauhaus">
                     <p>Hofbrauhaus</p><br>
                     <p>4 stars</p><br>
                     <p>Historic</p>
                 </div>
                 <div class = "eat-place">
-                    <img src="germanfood3.png" alt="Atelier">
+                    <img src="images/germanfood3.png" alt="Atelier">
                     <p>Atelier</p><br>
                     <p>4 stars</p><br>
                     <p>Gormet Cusine</p>
