--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         }
 
         .testimonial-heading{
-            width: 25%;
+            width: 50%;
         }
 
         .testimonial-heading h5{
@@ -486,7 +486,7 @@
     <div class="testimonials-section">
         <div class="testimonial-heading">
             <h5>TESTIMONIALS</h5>
-            <h2>What People Say <br>About Us</h2>
+            <h2>What People Say About Us</h2>
         </div>
         <div class="testimonial-entry">
             <img src="images/home/Girl.jpeg" alt="Girl">
