currency-rate updated

--- a/currency-rate.html
+++ b/currency-rate.html
@@ -91,7 +91,7 @@
         }
 
         .left-section {
-            width: 70%;
+            width: 60%;
             padding: 20px;
         }
 
@@ -147,9 +147,7 @@
             padding: 20px;
             border: none;
             border-radius: 8px;
-            margin-left: 100px;
-            margin-top: -400px;
-            margin-bottom: 40px;
+            margin: -400px 6rem 40px;
             background: #FFF; 
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
             font-family: 'Poppins', sans-serif;
@@ -188,6 +186,7 @@
         #resultDiv {
             margin-top: 10px;
             font-weight: bold;
+            color: #6C6C6C;
         }
 
         .calculate-button {
@@ -251,6 +250,7 @@
         .left-section {
             padding: 0;
             text-align: center;
+            width: 80%;
         }
 
         .left-section h1 {
