--- a/budget-hacks.html
+++ b/budget-hacks.html
@@ -301,10 +301,18 @@
             .right-section {
                 width: 100%;
                 padding-top: 0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .right-section img {
+                width: 40%;
             }
 
             .transportation-allsteps, .accommodation-allsteps, .activities-allsteps {
                 flex-direction: column;
+                align-items: center;
             }
         }
     </style>
