--- a/sign-up.html
+++ b/sign-up.html
@@ -10,22 +10,17 @@
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-        const subscribeButton = document.querySelector('.subscribe-button');
-        const emailInput = document.querySelector('.email-input');
+            const subscribeButton = document.querySelector('.subscribe-button');
+            const emailInput = document.querySelector('.email-input');
 
-        subscribeButton.addEventListener('click', function () {
-            // Email validation using regular expression
-            const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-            const isEmailValid = emailPattern.test(emailInput.value);
-
-            if (!isEmailValid) {
-                alert('Please enter a valid email address.');
-            } else {
-                alert('Thank you for subscribing to our newsletter!');
-                emailInput.value = ''; // Clear the email input
-            }
-        });
-        });
+            subscribeButton.addEventListener('click', function () {
+                if (emailInput.value.trim() === '') {
+                    alert('Please enter your email address.');
+                } else {
+                    alert('Thank you for subscribing to our newsletter!');
+                    emailInput.value = ''; // Clear the email input
+                }
+            });
 
             const signupForm = document.getElementById('signup-form');
             signupForm.addEventListener('submit', function (event) {
@@ -51,6 +46,7 @@
 
                 return true;
             }
+        });
     </script>
     <style>
     
