--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 
         .intro-section img{
             flex: 1;
-            height: auto;
-            margin-top: -50px;
-            max-width: 40%;
+            height: 40%;
+            margin-top: 50px;
+            width: 40%;
         }
 
         .zoom-in-image {
@@ -278,6 +278,7 @@
         @media screen and (max-width: 900px) {
             .intro-section {
                 flex-direction: column;
+                align-items: center;
             }
 
             .intro-text {
@@ -300,7 +301,7 @@
             }
 
             .intro-section img {
-                max-width: 100%;
+                width: 80%;
                 margin-top: 0;
             }
             
