--- a/packages.html
+++ b/packages.html
@@ -160,6 +160,12 @@
             background-color: #f9ad77;
         }
 
+        @media screen and (max-width: 1100px) {
+            .right-section img {
+                margin-left: 5.5rem;
+            }
+        }
+
         @media screen and (max-width: 900px) {
             
         .packages-table {
@@ -233,6 +239,7 @@
             align-items: center;
             text-align: center;
             width: 100%;
+            margin-left: 0;
         }
 
         .packages-section {
