money image resizing fixed

--- a/currency-rate.html
+++ b/currency-rate.html
@@ -238,6 +238,16 @@
         display: block;
     }
 
+    @media screen and (max-width: 1100px) {
+        .left-section {
+            width: 50%;
+        }
+
+        .right-section {
+            width: 40%;
+        }
+    }
+
     @media screen and (max-width: 900px) {
         .content {
             padding: 0;
