resultDiv mobile friendly

--- a/currency-rate.html
+++ b/currency-rate.html
@@ -308,6 +308,10 @@
         select {
             width: 87%;
         }
+
+        #resultDiv {
+            margin-top: 15px;
+        }
     }
 
     </style>
