--- a/budget-hacks.html
+++ b/budget-hacks.html
@@ -275,6 +275,12 @@
             width: 65%; 
         }
 
+        @media screen and (max-width: 1200px) {
+            .right-section img {
+                margin-top: 4rem;
+            }
+        }
+
         @media screen and (max-width: 900px) {
             .content {
                 flex-direction: column;
